--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   },
   "author": "DotSolution",
   "license": "ISC",
-   "dependencies": {
+  "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
     "mysql2": "^3.1.2",
     "nodemon": "^2.0.22",
     "sequelize": "^6.29.0"
