--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.1.2",
     "nodemon": "^2.0.22",
+    "pdfkit": "^0.13.0",
     "sequelize": "^6.29.0"
   }
 }
