--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql2": "^3.1.2",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "pdfkit": "^0.13.0",
     "sequelize": "^6.29.0"
