--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Barraca API",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index "
+    "test": "npx autocannon -c 500 -d 10 --workers 5 --renderStatusCodes  localhost:3000/costumers",
+    "start": "node server"
   },
   "author": "DotSolution",
   "license": "ISC",
   "dependencies": {
+    "autocannon": "^7.11.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
