--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "pdfkit": "^0.13.0",
-    "sequelize": "^6.29.0"
+    "sequelize": "^6.29.0",
+    "socket.io": "^4.7.0"
   }
 }
