--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "pdfkit": "^0.13.0",
-    "socket.io": "^4.7.0",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.29.0"
+    "sequelize": "^6.29.0",
+    "socket.io": "^4.7.0"
   }
 }
