--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.29.0",
-    "socket.io": "^4.7.0"
+    "socket.io": "^4.7.0",
+    "xss": "^1.0.14"
   }
 }
